--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="water_harvesting_schemes">Water Harvesting <br></br>Schemes</string>
-    <string name="Celebration_Environmental_Planting">Celebration <br></br>Environmental<br></br>Planing</string>
+    <string name="Celebration_Environmental_Planting_Event">Celebration <br></br> Environmental <br></br> Planting<br></br> Events</string>
     <string name="Extension_Material_Prepared">Extension Material <br></br>Prepared</string>
 
 </resources>
